# web3bridge-curriculum

ink-papi-demo/: index.html  package-lock.json  package.json
ink-papi-demo/.papi/: polkadot-api.json
ink-papi-demo/.papi/contracts/: psp_coin.json
ink-papi-demo/deployments/psp/: psp_coin.contract  psp_coin.polkavm
ink-papi-demo/src/: App.tsx  main.tsx
ink-papi-demo/src/components/: Navbar.tsx
ink-papi-demo/src/contexts/: ink-client.tsx  types.ts  wallet-provider.tsx
ink-papi-demo/src/utils/: helpers.ts
psp_coin/: Cargo.toml  lib.rs  traits.rs
xcontract_demo/contract_a/: Cargo.toml  lib.rs
xcontract_demo/contract_b/: Cargo.toml  lib.rs
xcontract_demo/contract_c/: Cargo.toml  lib.rs
